Fixed overflow issue.

--- a/OniWebSite/src/styles/global.scss
+++ b/OniWebSite/src/styles/global.scss
@@ -160,8 +160,9 @@ only screen and (min-device-width: 374px) and (max-device-width: 376px) {
 .macarons-container {
     height: 100%;
     font-family: 'Museo Sans Cyrl 500'; // position: relative;
+    overflow-x: hidden;
     .macarons-header {
-        width: calc(100% - 20px);
+        width: 100%;
         height: 450px;
         background-color: #eea250;
         padding-top: 86px;
@@ -291,8 +292,9 @@ only screen and (min-device-width: 374px) and (max-device-width: 376px) {
     height: 100%;
     font-family: 'Museo Sans Cyrl 500'; // position: relative;
     font-size: 1.9vh;
+    overflow-x: hidden;
     .cakes-header {
-        width: calc(100% - 20px);
+        width: 100%;
         height: 450px;
         background-color: #ce97be;
         padding-top: 86px;
